@@ -1,3 +1,12 @@
+2010-05-04  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>
+
+	* include/StatsInfo.h: Add STATS_DIFF and STATS_DIFF_REUSE macros.
+	Do some code clean-ups.
+	* src/PrimitiveDMCS.cpp: Likewise.
+	* include/BaseDMCS.h: Likewise.
+	* include/PrimitiveDMCS.h: Likewise.
+	* include/CommandType.h: Likewise.
+
 2010-05-03  Minh Tran Dao  <dao@dvorak.kr.tuwien.ac.at>
 
 	* configure.ac: Add BOOST_DATE_TIME
